# FullstackCendresVapeur

./: .gitignore  ROADMAP.md  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  output_file.txt  pyproject.toml  requirements.txt
backend/api_tester/: __init__.py  __main__.py  auth_helper.py  catalog.py  client.py  runner.py
backend/app/: config.py  main.py
backend/app/air/: constants.py  hub.py  monitor.py  schemas.py  ticker.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/carts/: schemas.py  service.py
backend/app/categories/: schemas.py  service.py
backend/app/chat/: hub.py  schemas.py  service.py
backend/app/colony/: schemas.py  service.py
backend/app/contact/: schemas.py  (+1 more)
backend/db/: db.sh  schema.sql  seed.sql
backend/docs/: API_TESTER.md  COPPER_MARKET.md
backend/models/: __init__.py  air_quality.py  cart.py  cart_item.py  category.py  chat_message.py  colony_event.py  colony_log.py  contact_message.py  discount_code.py  order.py  order_item.py  password_reset_code.py  price_history.py  product.py  product_vote.py  role.py  shift_note.py  two_factor_code.py  user.py
backend/tests/: conftest.py  test_air.py  test_auth_2fa_env.py  test_auth_journal.py  test_auth_password_reset.py  test_categories.py  test_chat_hub.py  test_chat_poll.py  test_chat_routes.py  test_chat_service.py  test_chat_ws.py  test_colony.py  test_contact_routes.py  test_copper.py  test_errors_behavioral_codes.py  test_errors_exceptions.py  test_errors_handlers.py  test_errors_integration.py  test_existing_models_columns.py  test_infra_smoke.py  test_journal.py  test_logs_monitor.py  test_logs_producers.py  test_logs_routes.py  test_logs_service.py  test_model_relationships.py  test_models_mapping.py  test_new_models_columns.py  test_order_confirmation_email.py  test_products_delete.py  test_products_filters.py  test_products_likes.py  test_products_url.py  test_schema_conformance.py  test_users_route.py  test_votes_my_likes.py  test_votes_write.py
(+192 files in other folders)
